[package]
name = "rioterm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository = "https://github.com/raphamorim/rio"
documentation = "https://github.com/raphamorim/rio#readme"
description = "A hardware-accelerated GPU terminal emulator powered by WebGPU, focusing to run in desktops and browsers"

[[bin]]
name = "rio"
path = "src/main.rs"

[dependencies]
base64 = "0.21.0"
bitflags = "2.0.2"
futures = "0.3"
raw-window-handle = { version = "0.5", default-features = false }
bytemuck = { workspace = true }
rio-config = { workspace = true }
corcovado = { workspace = true }
clap = { version = "4.2.7", features = ["derive"] }
copypasta = { version = "0.8.1", default-features = false }
dirs = "5.0"
notify = "6.0.0"
glyph_brush = "0.7.7"
image = { version = "0.24.5", default-features = false, features = ["ico"] }
lazycell = "1"
libc = { workspace = true }
log = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
sugarloaf = { workspace = true }
teletypewriter = { workspace = true }
tokio = { workspace = true }
unicode-width = "0.1.5"
copa = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
unicode-normalization = "0.1"
cursor-icon = { version = "1.0.0", default-features = false }

#[target.'cfg(target_os = "macos")'.dependencies]
#objc = "0.2.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "=0.3.0-beta.0" }
objc2-foundation = { version = "=0.2.0-alpha.5" }

[target.'cfg(not(any(target_os="windows", target_os="macos")))'.dependencies]
x11-dl = { version = "2", optional = true }
wayland-client = { version = "0.29.0", features = ["dlopen"], optional = true }

[target.'cfg(windows)'.dependencies]
ahash = { version = "0.8.2", default-features = false, features = ["std"] }
tinyvec = { version = "1.6.0", features = ["alloc"] }
windows-sys = { version = "0.48", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}

[features]
default = ["wayland", "x11"]
x11 = [
    "copypasta/x11",
    "winit/x11"
]
wayland = [
    "copypasta/wayland",
    "winit/wayland",
    "winit/wayland-dlopen",
    "wayland-client"
]

[package.metadata.deb]
name = "rio"
maintainer = "Raphael Amorim <rapha850@gmail.com>"
copyright = "2023, Raphael Amorim <rapha850@gmail.com>"
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["../target/release/rio", "usr/local/bin/", "755"],
    ["../misc/rio.desktop", "usr/share/applications/", "644"],
    ["../misc/rio.terminfo", "usr/share/info/", "644"],
    ["../misc/logo.svg", "usr/share/icons/hicolor/scalable/apps/rio.svg", "644"],
    ["../README.md", "usr/share/doc/rio/", "644"],
    ["../LICENSE", "usr/share/doc/rio/", "664"]
]
extended-description = """\
Rio terminal is a hardware-accelerated GPU terminal emulator powered by WebGPU, focusing to run in desktops and browsers.
The supported platforms currently consist of BSD, Linux, macOS and Windows."""
