[package]
name = "tty"
description = "Rust crate to create a tty, which is a command in Unix and Unix-like operating systems to print the file name of the terminal connected to standard input. tty stands for TeleTYpewriter."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
authors = { workspace = true }

[dependencies]
libc = "0.2.140"