[package]

name          = "urca"
version       = "0.0.1"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>", "Raphael Amorim <rapha850@gmail.com"]
description   = "Non-blocking IO library for Rio terminal"
documentation = "https://raphamorim.io/rio/docs"
homepage      = "https://github.com/raphamorim/rio"
repository    = "https://github.com/raphamorim/rio"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
include       = [
  "Cargo.toml",
  "CHANGELOG.md",
  "src/**/*.rs"
]

[dependencies]
log = { workspace = true }
iovec = "0.1.1"
slab = "0.4.0"
net2 = "0.2.36"
cfg-if = "0.1.9"

[target.'cfg(target_os = "fuchsia")'.dependencies]
fuchsia-zircon = "0.3.2"
fuchsia-zircon-sys = "0.3.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.140"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.6"
miow   = "0.5.0"
kernel32-sys = "0.2"

[dev-dependencies]
env_logger = { version = "0.4.0", default-features = false }
tempdir    = "0.3.4"
bytes      = "0.3.0"

[[test]]
name = "test"
path = "test/mod.rs"
