[package]
name = "wa"
version = { workspace = true }
authors = ["Raphael Amorim <rapha850@gmail.com>"]
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Cross-platform window assistant made primarily for Rio terminal"

[dependencies]
raw-window-handle = { workspace = true }
log = { workspace = true }
sugarloaf = { workspace = true }
futures = "0.3.29"
wgpu = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2"
