[package]
name = "wa"
version = { workspace = true }
authors = ["Raphael Amorim <rapha850@gmail.com>"]
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Cross-platform window assistant made primarily for Rio terminal"

[dependencies]
raw-window-handle = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
parking_lot = { workspace = true }
once_cell = "1.19.0"
smol_str = { workspace = true }
lazy_static = "1.4.0"
fnv = "1.0.7"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2.7"
libc = { workspace = true }
futures = { workspace = true }
