[package]
name = "rioterm"
description = "Rio terminal is a hardware-accelerated GPU terminal emulator, focusing to run in desktops and browsers."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "rio"
path = "src/main.rs"

[dependencies]
wa = { workspace = true }
log = { workspace = true }
rio-backend = { workspace = true }
sugarloaf = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitflags = "2.4.1"
futures = { workspace = true }
corcovado = { workspace = true }
regex = { workspace = true }
raw-window-handle = { workspace = true }
clap = { version = "4.4.7", features = ["derive"] }
dirs = "5.0.1"
notify = "6.1.1"
image = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
teletypewriter = { workspace = true }
tokio = { workspace = true }
unicode-width = { workspace = true }
copa = { workspace = true }
wgpu = { workspace = true }
smol_str = "0.2.0"

[features]
default = ["wayland", "x11"]
x11 = [
    "rio-backend/x11",
]
wayland = [
    "rio-backend/wayland",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(windows)'.dependencies]
ahash = { version = "0.8.2", default-features = false, features = ["std"] }
tinyvec = { version = "1.6.0", features = ["alloc"] }
windows-sys = { version = "0.48", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}
