[package]
name = "rioterm-appkit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "rio"
path = "src/main.rs"

[dependencies]
wa = { path = "../../wa" }
log = { workspace = true }
rio-backend = { path = "../../rio-backend" }
bitflags = "2.4.1"
futures = "0.3.29"
corcovado = { workspace = true }
regex = { workspace = true }
raw-window-handle = { workspace = true }
clap = { version = "4.4.7", features = ["derive"] }
dirs = "5.0.1"
notify = "6.1.1"
image = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
teletypewriter = { workspace = true }
tokio = { workspace = true }
unicode-width = { workspace = true }
copa = { workspace = true }
wgpu = { workspace = true }

[features]
default = ["wayland", "x11"]
x11 = [
    "rio-backend/x11",
]
wayland = [
    "rio-backend/wayland",
]
